fixing overflow

--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ html{
     color: #eeeeee;
 }
 body{
+    overflow-x: hidden !important;
     width: 100%;
     height: 100%;
     background: url(images/sitebg.jpg) no-repeat center fixed;
